[tool.poetry]
name = "Amiibo-Finder"
version = "0.1.0"
description = ""
authors = ["Rileaxy <gregr769@hsd.k12.or.us>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pyqt6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
